--- a/src/MSO.AppStimmer/MSO.AppStimmer/MSO.AppStimmer/MenuPageMaster.xaml
+++ b/src/MSO.AppStimmer/MSO.AppStimmer/MSO.AppStimmer/MenuPageMaster.xaml
@@ -4,6 +4,7 @@
     xmlns="http://xamarin.com/schemas/2014/forms"
     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
     xmlns:appStimmer="clr-namespace:MSO.AppStimmer;assembly=MSO.AppStimmer"
+    xmlns:controls="clr-namespace:MSO.AppStimmer.Views.Controls;assembly=MSO.AppStimmer"
     Title="Master"
     Padding="0,23,0,0"
     BackgroundColor="Transparent"
@@ -18,39 +19,7 @@
             SeparatorVisibility="Default">
 
             <ListView.Header>
-                <Grid>
-                    <Grid.ColumnDefinitions>
-                        <ColumnDefinition Width="50" />
-                        <ColumnDefinition Width="*" />
-                    </Grid.ColumnDefinitions>
-                    <Grid.RowDefinitions>
-                        <RowDefinition Height="25" />
-                        <RowDefinition Height="25" />
-                    </Grid.RowDefinitions>
-
-                    <Image
-                        x:Name="ProfilePicture"
-                        Grid.Row="0"
-                        Grid.RowSpan="2"
-                        Grid.Column="0"
-                        Margin="6,6,6,6"
-                        Aspect="AspectFill"
-                        Source="{appStimmer:ImageResource MSO.AppStimmer.Resources.Images.SampleProfilePicture.jpg}" />
-
-
-                    <Label
-                        Grid.Row="0"
-                        Grid.Column="1"
-                        Style="{DynamicResource SubtitleStyle}"
-                        Text="Tobias"
-                        TextColor="White" />
-                    <Label
-                        Grid.Row="1"
-                        Grid.Column="1"
-                        Style="{DynamicResource SubtitleStyle}"
-                        Text="tinderchampion@sexy.net"
-                        TextColor="White" />
-                </Grid>
+                <controls:CurrentUserView />
             </ListView.Header>
 
             <ListView.ItemTemplate>
