--- a/src/MSO.AppStimmer/MSO.AppStimmer/MSO.AppStimmer/Views/Pages/AppStimmerPage.xaml
+++ b/src/MSO.AppStimmer/MSO.AppStimmer/MSO.AppStimmer/Views/Pages/AppStimmerPage.xaml
@@ -1,19 +1,41 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage
-    x:Class="MSO.AppStimmer.Views.Pages.AppStimmerPage"
+    x:Class="MSO.StimmApp.Views.Pages.AppStimmerPage"
     xmlns="http://xamarin.com/schemas/2014/forms"
     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-    xmlns:appStimmer="clr-namespace:MSO.AppStimmer;assembly=MSO.AppStimmer"
+    xmlns:appStimmer="clr-namespace:MSO.StimmApp;assembly=MSO.StimmApp"
     Title="Appstimmen"
     BindingContext="{Binding AppStimmer, Source={StaticResource Locator}}">
     <ContentPage.Content>
-        <StackLayout>
+        <Grid>
+            <Grid.RowDefinitions>
+                <RowDefinition Height="*" />
+                <RowDefinition Height="60" />
+            </Grid.RowDefinitions>
+
             <Image
                 x:Name="ImageTest"
+                Grid.Row="0"
+                Grid.RowSpan="2"
                 Aspect="AspectFill"
                 HorizontalOptions="FillAndExpand"
-                Source="{appStimmer:ImageResource MSO.AppStimmer.Resources.Images.Schlagloch.jpg}"
+                Source="{appStimmer:ImageResource MSO.StimmApp.Resources.Images.Schlagloch.jpg}"
                 VerticalOptions="FillAndExpand" />
-        </StackLayout>
+
+            <Grid BackgroundColor="#55000000" Row="1">
+                <Image
+                    Margin="10,0,0,0"
+                    HorizontalOptions="Start"
+                    Source="{appStimmer:ImageResource MSO.StimmApp.Resources.Icons.thumbs_down_red_circle.scale-100.png}" />
+                <Image
+                    Margin="0,0,0,0"
+                    HorizontalOptions="Center"
+                    Source="{appStimmer:ImageResource MSO.StimmApp.Resources.Icons.star_blue_circle.scale-100.png}" />
+                <Image
+                    Margin="0,0,10,0"
+                    HorizontalOptions="End"
+                    Source="{appStimmer:ImageResource MSO.StimmApp.Resources.Icons.thumbs_up_green_circle.scale-100.png}" />
+            </Grid>
+        </Grid>
     </ContentPage.Content>
 </ContentPage>
