--- a/src/MSO.AppStimmer/MSO.AppStimmer/MSO.AppStimmer/MenuPage.xaml
+++ b/src/MSO.AppStimmer/MSO.AppStimmer/MSO.AppStimmer/MenuPage.xaml
@@ -1,10 +1,10 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <MasterDetailPage
-    x:Class="MSO.AppStimmer.MenuPage"
+    x:Class="MSO.StimmApp.MenuPage"
     xmlns="http://xamarin.com/schemas/2014/forms"
     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-    xmlns:views="clr-namespace:MSO.AppStimmer.Views;assembly=MSO.AppStimmer">
+    xmlns:stimmApp="clr-namespace:MSO.StimmApp;assembly=MSO.StimmApp">
     <MasterDetailPage.Master>
-        <views:MenuPageMaster x:Name="MasterPage" />
+        <stimmApp:MenuPageMaster x:Name="MasterPage" />
     </MasterDetailPage.Master>
 </MasterDetailPage>
