--- a/src/MSO.AppStimmer/MSO.AppStimmer/MSO.AppStimmer/MenuPageMaster.xaml
+++ b/src/MSO.AppStimmer/MSO.AppStimmer/MSO.AppStimmer/MenuPageMaster.xaml
@@ -1,10 +1,9 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage
-    x:Class="MSO.AppStimmer.Views.MenuPageMaster"
+    x:Class="MSO.StimmApp.MenuPageMaster"
     xmlns="http://xamarin.com/schemas/2014/forms"
     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-    xmlns:appStimmer="clr-namespace:MSO.AppStimmer;assembly=MSO.AppStimmer"
-    xmlns:controls="clr-namespace:MSO.AppStimmer.Views.Controls;assembly=MSO.AppStimmer"
+    xmlns:controls="clr-namespace:MSO.StimmApp.Views.Controls;assembly=MSO.StimmApp"
     Title="Master"
     Padding="0,23,0,0"
     BackgroundColor="Transparent"
