--- a/src/MSO.AppStimmer/MSO.AppStimmer/MSO.AppStimmer/Views/Pages/AppStimmerEditorPage.xaml
+++ b/src/MSO.AppStimmer/MSO.AppStimmer/MSO.AppStimmer/Views/Pages/AppStimmerEditorPage.xaml
@@ -1,12 +1,20 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
-<ContentPage
+<TabbedPage
     x:Class="MSO.StimmApp.Views.Pages.AppStimmerEditorPage"
     xmlns="http://xamarin.com/schemas/2014/forms"
     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-    BindingContext="{Binding AppStimmerEditor, Source={StaticResource Locator}}">
-    <ContentPage.Content>
-        <StackLayout>
-            <Label Text="Hier kann man einen AppStimmer editieren." />
-        </StackLayout>
-    </ContentPage.Content>
-</ContentPage>
+    xmlns:controls="clr-namespace:MSO.StimmApp.Views.Controls;assembly=MSO.StimmApp"
+    BindingContext="{Binding AppStimmerEditor, Source={StaticResource Locator}}" >
+    <TabbedPage.Children>
+        <ContentPage Title="Overview">
+            <ContentPage.Content>
+                <controls:AppStimmerEditorDetailsView></controls:AppStimmerEditorDetailsView>
+            </ContentPage.Content>
+        </ContentPage>
+        <ContentPage Title="Details">
+            <ContentPage.Content>
+                <controls:AppStimmerEditorDetailsView></controls:AppStimmerEditorDetailsView>
+            </ContentPage.Content>
+        </ContentPage>
+    </TabbedPage.Children>
+</TabbedPage>
