--- a/src/MSO.AppStimmer/MSO.AppStimmer/MSO.AppStimmer/Views/Controls/AppStimmerEditorOverviewView.xaml
+++ b/src/MSO.AppStimmer/MSO.AppStimmer/MSO.AppStimmer/Views/Controls/AppStimmerEditorOverviewView.xaml
@@ -1,11 +1,12 @@
-﻿<?xml version="1.0" encoding="UTF-8"?>
-<ContentView xmlns="http://xamarin.com/schemas/2014/forms" 
-             xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="MSO.StimmApp.Views.Controls.AppStimmerEditorOverviewView"
-             BindingContext="{Binding AppStimmerEditor, Source={StaticResource Locator}}">
-  <ContentView.Content>
-      <StackLayout>
+﻿<?xml version="1.0" encoding="UTF-8" ?>
+<ContentView
+    x:Class="MSO.StimmApp.Views.Controls.AppStimmerEditorOverviewView"
+    xmlns="http://xamarin.com/schemas/2014/forms"
+    xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+    BindingContext="{Binding AppStimmerEditor, Source={StaticResource Locator}}">
+    <ContentView.Content>
+        <StackLayout>
             <Label Text="AppStimmer Editor (Overview)." />
-      </StackLayout>
-  </ContentView.Content>
+        </StackLayout>
+    </ContentView.Content>
 </ContentView>
