--- a/src/MSO.AppStimmer/MSO.AppStimmer/MSO.AppStimmer/Views/Controls/AppStimmerEditorHeader.xaml
+++ b/src/MSO.AppStimmer/MSO.AppStimmer/MSO.AppStimmer/Views/Controls/AppStimmerEditorHeader.xaml
@@ -1,11 +1,14 @@
 ﻿<ContentView
     x:Class="MSO.StimmApp.Views.Controls.AppStimmerEditorHeader"
     xmlns="http://xamarin.com/schemas/2014/forms"
-    xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-    BindingContext="{Binding AppStimmerEditor, Source={StaticResource Locator}}">
+    xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml">
     <ContentView.Content>
         <StackLayout>
-            <Entry Text="Die Hochschule sieht nicht gut aus" />
+            <Entry
+                HorizontalTextAlignment="Center"
+                Opacity="0.7"
+                Text="{Binding AppStimmer.Title}"
+                TextColor="DimGray" />
         </StackLayout>
     </ContentView.Content>
 </ContentView>
