--- a/src/MSO.AppStimmer/MSO.AppStimmer/MSO.AppStimmer/Views/Controls/AppStimmerEditorDetailsView.xaml
+++ b/src/MSO.AppStimmer/MSO.AppStimmer/MSO.AppStimmer/Views/Controls/AppStimmerEditorDetailsView.xaml
@@ -6,21 +6,20 @@
     xmlns:controls="clr-namespace:MSO.StimmApp.Views.Controls;assembly=MSO.StimmApp"
     xmlns:stimmApp="clr-namespace:MSO.StimmApp;assembly=MSO.StimmApp">
     <ContentView.Content>
-        <controls:AppStimmerEditorHeader />
-        <!--<Grid>
+        <Grid>
             <Grid.RowDefinitions>
                 <RowDefinition Height="Auto" />
                 <RowDefinition Height="*" />
                 <RowDefinition Height="50" />
             </Grid.RowDefinitions>
 
-            <controls:AppStimmerEditorHeader Grid.Row="1" />
-            <StackLayout Grid.Row="1" />
+            <controls:AppStimmerEditorHeader Grid.Row="0" />
+            <controls:AppStimmerAttachmentsListView Grid.Row="1" ItemsSource="{Binding AppStimmer.Attachments}" />
             <Image
                 Grid.Row="2"
                 HorizontalOptions="Center"
                 Source="{stimmApp:ImageResource MSO.StimmApp.Resources.Icons.thumbs_down_red_circle.scale-100.png}"
                 VerticalOptions="Center" />
-        </Grid>-->
+        </Grid>
     </ContentView.Content>
 </ContentView>
