--- a/src/MSO.AppStimmer/MSO.AppStimmer/MSO.AppStimmer/Views/Controls/AppStimmerAttachmentsListView.xaml
+++ b/src/MSO.AppStimmer/MSO.AppStimmer/MSO.AppStimmer/Views/Controls/AppStimmerAttachmentsListView.xaml
@@ -3,18 +3,21 @@
     x:Class="MSO.StimmApp.Views.Controls.AppStimmerAttachmentsListView"
     xmlns="http://xamarin.com/schemas/2014/forms"
     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+    xmlns:attachments="clr-namespace:MSO.StimmApp.Views.Attachments;assembly=MSO.StimmApp"
     xmlns:stimmApp="clr-namespace:MSO.StimmApp;assembly=MSO.StimmApp"
-    HasUnevenRows="True">
+    HasUnevenRows="True"
+    ItemTapped="AppStimmerAttachmentsListView_OnItemTapped"
+    SeparatorVisibility="None">
     <ListView.ItemTemplate>
         <DataTemplate>
             <ViewCell>
                 <ViewCell.View>
-                    <AbsoluteLayout Padding="10,10,10,0">
+                    <AbsoluteLayout Padding="10,10,10,10">
                         <StackLayout
-                            Padding="0,0,.5,.5"
                             AbsoluteLayout.LayoutBounds="0,0,1,1"
                             AbsoluteLayout.LayoutFlags="All"
-                            BackgroundColor="{StaticResource GrayPrimary}">
+                            BackgroundColor="{StaticResource GrayPrimary}"
+                            Spacing="0">
 
                             <StackLayout
                                 Padding="14,8"
@@ -29,25 +32,12 @@
                                     VerticalOptions="Center" />
                             </StackLayout>
 
-                            <StackLayout
-                                BackgroundColor="White"
-                                Orientation="Vertical"
-                                Spacing="0"
-                                VerticalOptions="FillAndExpand">
-                                <AbsoluteLayout HeightRequest="125">
-                                    <Image
-                                        AbsoluteLayout.LayoutBounds=".5,.5,-1,-1"
-                                        AbsoluteLayout.LayoutFlags="PositionProportional"
-                                        HeightRequest="24"
-                                        WidthRequest="24" />
-                                    <Image
-                                        AbsoluteLayout.LayoutBounds="0,0,1,1"
-                                        AbsoluteLayout.LayoutFlags="All"
-                                        Aspect="AspectFill"
-                                        Opacity=".8"
-                                        Source="{stimmApp:ImageResource MSO.StimmApp.Resources.Images.Schlagloch.jpg}" />
-                                </AbsoluteLayout>
-                            </StackLayout>
+                            <Grid BackgroundColor="White" HeightRequest="125">
+                                <Grid.Children>
+                                    <attachments:TextAttachmentView IsVisible="{Binding AttachmentType, Converter={StaticResource AppStimmerAttachmentTypeToViewEnabledConverter}, ConverterParameter=Text}" />
+                                    <attachments:ImageAttachmentView IsVisible="{Binding AttachmentType, Converter={StaticResource AppStimmerAttachmentTypeToViewEnabledConverter}, ConverterParameter=Picture}" />
+                                </Grid.Children>
+                            </Grid>
                         </StackLayout>
                     </AbsoluteLayout>
                 </ViewCell.View>
