--- a/src/MSO.AppStimmer/MSO.AppStimmer/MSO.AppStimmer/App.xaml
+++ b/src/MSO.AppStimmer/MSO.AppStimmer/MSO.AppStimmer/App.xaml
@@ -36,6 +36,7 @@
             <converter:ImageResourceConverter x:Key="ImageSourceConverter" />
             <converter:AppStimmerAttachmentToViewConverter x:Key="AppStimmerAttachmentToViewConverter" />
             <converter:AppStimmerAttachmentTypeToViewEnabledConverter x:Key="AppStimmerAttachmentTypeToViewEnabledConverter" />
+            <converter:BooleanConverter x:Key="BooleanConverter" />
         </ResourceDictionary>
     </Application.Resources>
 </Application>
