--- a/src/MSO.AppStimmer/MSO.AppStimmer/MSO.AppStimmer/Views/Attachments/AddAttachmentView.xaml
+++ b/src/MSO.AppStimmer/MSO.AppStimmer/MSO.AppStimmer/Views/Attachments/AddAttachmentView.xaml
@@ -2,10 +2,147 @@
 <ContentView
     x:Class="MSO.StimmApp.Views.Attachments.AddAttachmentView"
     xmlns="http://xamarin.com/schemas/2014/forms"
-    xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml">
+    xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+    xmlns:controls="clr-namespace:MSO.StimmApp.Controls;assembly=MSO.StimmApp"
+    xmlns:stimmApp="clr-namespace:MSO.StimmApp;assembly=MSO.StimmApp">
     <ContentView.Content>
-        <StackLayout>
-            <Label Text="Hello Xamarin.Forms!" />
-        </StackLayout>
+        <Grid Padding="15,15,15,15">
+            <Grid.RowDefinitions>
+                <RowDefinition Height="1*" />
+                <RowDefinition Height="1*" />
+            </Grid.RowDefinitions>
+
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="1*" />
+                <ColumnDefinition Width="1*" />
+                <ColumnDefinition Width="1*" />
+            </Grid.ColumnDefinitions>
+
+            <controls:AppStimmerAttachmentButton
+                Grid.Row="0"
+                Grid.Column="0"
+                Description="Dokument"
+                IconSource="MSO.StimmApp.Resources.Icons.document_circle.scale-100.png" />
+            <controls:AppStimmerAttachmentButton
+                Grid.Row="0"
+                Grid.Column="1"
+                Description="Kamera"
+                IconSource="MSO.StimmApp.Resources.Icons.camera_circle.scale-100.png" />
+            <controls:AppStimmerAttachmentButton
+                Grid.Row="0"
+                Grid.Column="2"
+                Description="Galerie"
+                IconSource="MSO.StimmApp.Resources.Icons.gallery_circle.scale-100.png" />
+            <controls:AppStimmerAttachmentButton
+                Grid.Row="1"
+                Grid.Column="0"
+                Description="Text"
+                IconSource="MSO.StimmApp.Resources.Icons.text_circle.scale-100.png" />
+            <controls:AppStimmerAttachmentButton
+                Grid.Row="1"
+                Grid.Column="1"
+                Description="Standort"
+                IconSource="MSO.StimmApp.Resources.Icons.location_circle.scale-100.png" />
+            <controls:AppStimmerAttachmentButton
+                Grid.Row="1"
+                Grid.Column="2"
+                Description="Audio"
+                IconSource="MSO.StimmApp.Resources.Icons.audio_circle.scale-100.png" />
+        </Grid>
     </ContentView.Content>
+
+
+    <!--<StackLayout Orientation="Vertical">
+            <Grid Margin="20,0,0,20">
+                <Grid HorizontalOptions="Start">
+                    <Grid.RowDefinitions>
+                        <RowDefinition Height="*" />
+                        <RowDefinition Height="Auto" />
+                    </Grid.RowDefinitions>
+
+                    <Image Grid.Row="0" Source="{stimmApp:ImageResource MSO.StimmApp.Resources.Icons.document_circle.scale-100.png}" />
+                    <Label
+                        Grid.Row="1"
+                        HorizontalTextAlignment="Center"
+                        Text="Dokument" />
+                </Grid>
+
+                <Grid HorizontalOptions="Center">
+                    <Grid.RowDefinitions>
+                        <RowDefinition Height="*" />
+                        <RowDefinition Height="Auto" />
+                    </Grid.RowDefinitions>
+
+                    <Image Grid.Row="0" Source="{stimmApp:ImageResource MSO.StimmApp.Resources.Icons.camera_circle.scale-100.png}" />
+                    <Label
+                        Grid.Row="1"
+                        HorizontalTextAlignment="Center"
+                        Text="Kamera" />
+                </Grid>
+
+                <Grid HorizontalOptions="End">
+                    <Grid.RowDefinitions>
+                        <RowDefinition Height="*" />
+                        <RowDefinition Height="Auto" />
+                    </Grid.RowDefinitions>
+
+                    <Image Grid.Row="0" Source="{stimmApp:ImageResource MSO.StimmApp.Resources.Icons.gallery_circle.scale-100.png}" />
+                    <Label
+                        Grid.Row="1"
+                        HorizontalTextAlignment="Center"
+                        Text="Galerie" />
+                </Grid>
+            </Grid>
+
+            <StackLayout Orientation="Horizontal">
+                <Grid>
+                    <Grid.RowDefinitions>
+                        <RowDefinition Height="*" />
+                        <RowDefinition Height="Auto" />
+                    </Grid.RowDefinitions>
+
+                    <Image
+                        Grid.Row="0"
+                        HorizontalOptions="Start"
+                        Source="{stimmApp:ImageResource MSO.StimmApp.Resources.Icons.text_circle.scale-100.png}" />
+                    <Label
+                        Grid.Row="1"
+                        HorizontalTextAlignment="Center"
+                        Text="Text" />
+                </Grid>
+
+                <Grid>
+                    <Grid.RowDefinitions>
+                        <RowDefinition Height="*" />
+                        <RowDefinition Height="Auto" />
+                    </Grid.RowDefinitions>
+
+                    <Image
+                        Grid.Row="0"
+                        HorizontalOptions="Start"
+                        Source="{stimmApp:ImageResource MSO.StimmApp.Resources.Icons.location_circle.scale-100.png}" />
+                    <Label
+                        Grid.Row="1"
+                        HorizontalTextAlignment="Center"
+                        Text="Ort" />
+                </Grid>
+
+                <Grid>
+                    <Grid.RowDefinitions>
+                        <RowDefinition Height="*" />
+                        <RowDefinition Height="Auto" />
+                    </Grid.RowDefinitions>
+
+                    <Image
+                        Grid.Row="0"
+                        HorizontalOptions="Start"
+                        Source="{stimmApp:ImageResource MSO.StimmApp.Resources.Icons.audio_circle.scale-100.png}" />
+                    <Label
+                        Grid.Row="1"
+                        HorizontalTextAlignment="Center"
+                        Text="Audio" />
+                </Grid>
+            </StackLayout>
+        </StackLayout>-->
+
 </ContentView>
