--- a/src/MSO.AppStimmer/MSO.AppStimmer/MSO.AppStimmer/Controls/AppStimmerAttachmentButton.xaml
+++ b/src/MSO.AppStimmer/MSO.AppStimmer/MSO.AppStimmer/Controls/AppStimmerAttachmentButton.xaml
@@ -10,8 +10,11 @@
                 <RowDefinition Height="Auto" />
             </Grid.RowDefinitions>
 
-            <Image Grid.Row="0" Source="{Binding IconSource, Converter={StaticResource ImageSourceConverter}}" x:Name="AttachmentImageButton">
-                <Image.GestureRecognizers >
+            <Image
+                x:Name="AttachmentImageButton"
+                Grid.Row="0"
+                Source="{Binding IconSource, Converter={StaticResource ImageSourceConverter}}">
+                <Image.GestureRecognizers>
                     <TapGestureRecognizer Tapped="AttachmentImageButton_OnTapped" />
                 </Image.GestureRecognizers>
             </Image>
